[project]
name = "moolings_rcon_api"
version = "0.0.3"
description = "Mooling's Rcon API for MCDReforged."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncrcon>=1.1.4",
    "mcdreforged>=2.15.7",
    "returns>=0.23.0",
]

[tool.setuptools.packages.find]
include = ["moolings_rcon_api*"]
exclude = ["lang*"]
