[project]
name = "moolings_rcon_api"
version = "0.1.0"
description = "Mooling's Rcon API for MCDReforged."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncrcon>=1.1.4",
    "javaproperties>=0.8.2",
    "mcdreforged>=2.15.7",
    "returns>=0.23.0",
]

[tool.setuptools.packages.find]
include = ["moolings_rcon_api*"]
exclude = ["lang*"]
